2007-12-17  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
	(gst_ffmpeg_formatid_get_codecids),
	(gst_ffmpeg_get_codecid_longname):
	* ext/ffmpeg/gstffmpegdemux.c: (gst_ffmpegdemux_loop),
	(gst_ffmpegdemux_register):
	* ext/ffmpeg/gstffmpegmux.c: (gst_ffmpegmux_collected),
	(gst_ffmpegmux_register):
	Add GIF (animations and single images) decoding and encoding support.
	Fixes #503249.

2007-12-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* configure.ac:
	Minor typo in disabling cavs decoder. Now compiles AND works on x86 32
	and 64 bits ! Time to merge :)

2007-12-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* ext/ffmpeg/gstffmpegcodecmap.c: (gst_ffmpeg_codecid_to_caps),
	(gst_ffmpeg_caps_to_codecid):
	* ext/ffmpeg/gstffmpegdec.c: (gst_ffmpegdec_open):
	Handle VC-1 properly , which is handled differently from WMV3.

2007-12-17  Edward Hervey  <edward.hervey@collabora.co.uk>

	* autogen.sh:
	Fix call to ffmpegrev
	* configure.ac:
	Re-apply -fPIC extra-cflag for ffmpeg while removing support for the
	flac encoder which is currently broken for x86/32bits with -fPIC.
	* ffmpegrev:
	Switch to latest upstream revision so we can have the split-up for
	flac mmx optimizations.

2007-12-15  Sebastian Dröge  <slomo@circular-chaos.org>

	Based on a patch by:
	    Hans de Goede <j dot w dot r degoede at hhs dot nl>

	* ext/ffmpeg/gstffmpegcfg.c: (gst_ffmpeg_pre_me_get_type),
	  (gst_ffmpeg_pred_method_get_type):
	  NULL-terminate the GEnumValue arrays, otherwise they will cause
	  crashes. Fixes #503733.

2007-12-09  Sebastian Dröge  <slomo@circular-chaos.org>

	* configure.ac:
	  Don't define GST_DISABLE_DEPRECATED for releases. Fixes #498181.

2007-11-28  Edward Hervey  <bilboed@bilboed.com>

	* configure.ac:
	Temporarily remove fPIC option for building ffmpeg
	* ffmpegrev:
	Switch to latest ffmpeg checkout so people can enjoy all the niceties