@@ -2,10 +2,8 @@ DISTCHECK_CONFIGURE_FLAGS=--enable-gtk-doc
 
 SUBDIRS = $(FFMPEG_SUBDIRS) ext docs common tests
 
-win32 = $(shell cat $(top_srcdir)/win32/MANIFEST)
-
-debug:
-	echo $(win32)	
+# include before EXTRA_DIST for win32 assignment
+include $(top_srcdir)/common/win32.mak
 
 EXTRA_DIST = \
 	gst-ffmpeg.spec depcomp ffmpegrev \
